--- a/styles/main.css
+++ b/styles/main.css
@@ -86,6 +86,13 @@ li {
     line-height: 1em;
 }
 
+#job-title {
+    font-size: 1.2em;
+    font-weight: 400;
+    color: var(--secondaryTextColor);
+    margin-bottom: 1em;
+}
+
 #profile-pic {
     width: 150px;
     height: 150px;
@@ -257,17 +264,21 @@ li {
     margin-bottom: 15px;
 }
 
+.project-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .project-number {
     font-size: 0.9em;
     color: #6c757d;
-    margin-right: 10px;
 }
 
 #github-link {
-    background: none;
     width: 30px;
     height: auto;
-    margin-left: 10px;
+    margin-left: auto;
     transition: transform 0.3s ease, opacity 0.3s ease;
     cursor: pointer;
 }
@@ -364,6 +375,7 @@ body.dark-mode .theme-toggle {
     }
 
     #bio {
+        margin-top: 0.2em;
         font-size: 0.9em;
     }
 
