--- a/styles/main.css
+++ b/styles/main.css
@@ -117,6 +117,7 @@ li {
     background-color: #f0f0f0;
     border-radius: 50px;
     color: #333;
+    margin-bottom: 0.3em;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
